Book-Index z-index and preventDefault

--- a/scss/commons/_layout.scss
+++ b/scss/commons/_layout.scss
@@ -51,3 +51,8 @@
     }
   }
 }
+
+// Book z-index
+#book-index.active {
+  z-index: 1100;
+}
